--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "require": {
     "illuminate/database": "^5.3",
     "vlucas/phpdotenv": "^2.4",
-    "symfony/http-foundation": "^3.2"
+    "symfony/http-foundation": "^3.2",
+    "twig/twig": "~1.0"
   },
   "autoload": {
     "psr-4": {
