--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "illuminate/database": "^5.3",
     "vlucas/phpdotenv": "^2.4",
     "symfony/http-foundation": "^3.2",
+    "symfony/routing": "^3.2",
     "twig/twig": "~1.0"
   },
   "autoload": {
